// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`free-layout-preset > custom fromNodeJSON and toNodeJSON 1`] = `
{
  "edges": [
    {
      "sourceNodeID": "start_0",
      "targetNodeID": "end_0",
    },
  ],
  "nodes": [
    {
      "data": {
        "isFirstCreate": true,
        "runningTimes": 1,
        "title": "start",
      },
      "id": "start_0",
      "meta": {
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      "type": "start",
    },
    {
      "data": {
        "isFirstCreate": true,
        "runningTimes": 1,
        "title": "end",
      },
      "id": "end_0",
      "meta": {
        "position": {
          "x": 800,
          "y": 0,
        },
      },
      "type": "end",
    },
  ],
}
`;

exports[`free-layout-preset > custom fromNodeJSON and toNodeJSON 2`] = `
{
  "edges": [
    {
      "sourceNodeID": "start_0",
      "targetNodeID": "end_0",
    },
  ],
  "nodes": [
    {
      "data": {
        "isFirstCreate": false,
        "runningTimes": 1,
        "title": "start changed",
      },
      "id": "start_0",
      "meta": {
        "position": {
          "x": 1,
          "y": 1,
        },
      },
      "type": "start",
    },
    {
      "data": {
        "isFirstCreate": false,
        "runningTimes": 1,
        "title": "end changed",
      },
      "id": "end_0",
      "meta": {
        "position": {
          "x": 801,
          "y": 1,
        },
      },
      "type": "end",
    },
  ],
}
`;
